--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,7 +1,8 @@
 # change opacity
 background_opacity 0.95
 
-hide_window_decorations yes
+# hide_window_decorations yes
+hide_window_decorations no
 allow_remote_control yes
 
 # change fonts
