--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,6 +3,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows on # renumber windows after deletion
 set -g mouse on
+set-option -g focus-events on
 
 # split windows
 bind "\\" split-window -hc "#{pane_current_path}"
